# libvterm

./: .bzrignore  meson.build
include/: vterm.h
src/: pen.c  screen.c  vterm_internal.h
t/: harness.c  list-tests.pl
